--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,13 @@
     <version>3.141.59</version>
 </dependency>
 
-
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.4.0</version>
+    
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
